@@ -6,7 +6,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Phoenix Connectors</name>
-  <description>Connectors for third party libraries to access data stored in Phoenix</description>
+  <description>Connectors for third party libraries to access data stored in Phoenix/HBase</description>
 
   <licenses>
     <license>
@@ -28,6 +28,7 @@
     <module>phoenix-pig</module>
     <module>phoenix-spark</module>
     <module>phoenix-hive</module>
+    <module>presto-phoenix-shaded</module>
   </modules>
 
   <repositories>
@@ -50,59 +51,33 @@
   </scm>
 
   <properties>
-    <!-- General Properties -->
-    <antlr-input.dir>src/main/antlr3</antlr-input.dir>
-    <antlr-output.dir>target/generated-sources/antlr3</antlr-output.dir>
-    <test.output.tofile>true</test.output.tofile>
-    <top.dir>${project.basedir}</top.dir>
-
-    <!-- Hadoop Versions -->
+    <!-- Phoenix Version -->
     <phoenix.version>4.15.0-HBase-1.4-SNAPSHOT</phoenix.version>
+    <!-- Hadoop Versions -->
     <hbase.version>1.4.0</hbase.version>
     <hadoop-two.version>2.7.5</hadoop-two.version>
 
+    <!-- General Properties -->
+    <test.output.tofile>true</test.output.tofile>
+    <top.dir>${project.basedir}</top.dir>
+
+
     <!-- Dependency versions -->
-    <commons-cli.version>1.2</commons-cli.version>
     <hive.version>1.2.1</hive.version>
     <hadoop.version>2.7.1</hadoop.version>
     <pig.version>0.13.0</pig.version>
-    <jackson.version>1.9.2</jackson.version>
-    <antlr.version>3.5.2</antlr.version>
     <log4j.version>1.2.17</log4j.version>
     <disruptor.version>3.3.6</disruptor.version>
     <slf4j.version>1.6.4</slf4j.version>
-    <protobuf-java.version>2.5.0</protobuf-java.version>
-    <commons-io.version>2.1</commons-io.version>
-    <commons-lang.version>2.5</commons-lang.version>
-    <commons-logging.version>1.2</commons-logging.version>
     <commons-csv.version>1.0</commons-csv.version>
-    <sqlline.version>1.2.0</sqlline.version>
     <guava.version>13.0.1</guava.version>
     <flume.version>1.4.0</flume.version>
     <kafka.version>0.9.0.0</kafka.version>
-    <findbugs-annotations.version>1.3.9-1</findbugs-annotations.version>
-    <jcip-annotations.version>1.0-1</jcip-annotations.version>
-    <jline.version>2.11</jline.version>
-    <snappy.version>0.3</snappy.version>
-    <commons-codec.version>1.7</commons-codec.version>
-    <htrace.version>3.1.0-incubating</htrace.version>
-    <collections.version>3.2.2</collections.version>
-    <!-- Do not change jodatime.version until HBASE-15199 is fixed -->
-    <jodatime.version>1.6</jodatime.version>
-    <joni.version>2.1.2</joni.version>
-    <avatica.version>1.12.0</avatica.version>
-    <jettyVersion>8.1.7.v20120910</jettyVersion>
-    <tephra.version>0.15.0-incubating</tephra.version>
-    <omid.version>1.0.0</omid.version>
     <spark.version>2.4.0</spark.version>
     <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
-    <stream.version>2.9.5</stream.version>
-    <i18n-util.version>1.0.4</i18n-util.version>
-    <servlet.api.version>3.1.0</servlet.api.version>
-    <!-- Test Dependencies -->
     <mockito-all.version>1.8.5</mockito-all.version>
-    <junit.version>4.12</junit.version>
+    <junit.version>4.12</junit.version>   
 
     <!-- Plugin versions -->
     <maven-eclipse-plugin.version>2.9</maven-eclipse-plugin.version>
@@ -122,7 +97,7 @@
     <!-- Set default encoding so multi-byte tests work correctly on the Mac -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-   <curator.version>2.12.0</curator.version>
+    <curator.version>2.12.0</curator.version>  
 
   </properties>
 
@@ -295,42 +270,6 @@
                 <goal>verify</goal>
               </goals>
             </execution>
-	    <execution>
-              <id>NeedTheirOwnClusterTests</id>
-              <configuration>
-                 <encoding>UTF-8</encoding>
-                 <forkCount>${numForkedIT}</forkCount>
-                 <runOrder>alphabetical</runOrder>
-                 <reuseForks>false</reuseForks>
-                 <argLine>-enableassertions -Xmx2000m -XX:MaxPermSize=256m -Djava.security.egd=file:/dev/./urandom "-Djava.library.path=${hadoop.library.path}${path.separator}${java.library.path}" -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./target/</argLine>
-                 <redirectTestOutputToFile>${test.output.tofile}</redirectTestOutputToFile>
-                 <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
-                 <groups>org.apache.phoenix.end2end.NeedsOwnMiniClusterTest</groups>
-                 <shutdown>kill</shutdown>
-              </configuration>
-              <goals>
-                 <goal>integration-test</goal>
-                 <goal>verify</goal>
-              </goals>
-            </execution>
-<execution>
-              <id>SplitSystemCatalogTests</id>
-              <configuration>
-                 <encoding>UTF-8</encoding>
-                 <forkCount>${numForkedIT}</forkCount>
-                 <runOrder>alphabetical</runOrder>
-                 <reuseForks>false</reuseForks>
-                 <argLine>-enableassertions -Xmx2000m -XX:MaxPermSize=256m -Djava.security.egd=file:/dev/./urandom "-Djava.library.path=${hadoop.library.path}${path.separator}${java.library.path}" -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./target/</argLine>
-                 <redirectTestOutputToFile>${test.output.tofile}</redirectTestOutputToFile>
-                 <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
-                 <groups>org.apache.phoenix.end2end.SplitSystemCatalogTests</groups>
-                 <shutdown>kill</shutdown>
-              </configuration>
-              <goals>
-                 <goal>integration-test</goal>
-                 <goal>verify</goal>
-              </goals>
-            </execution>
           </executions>
         </plugin>
         <plugin>
@@ -416,8 +355,7 @@
           <execution>
             <id>attach-javadocs</id>
             <goals>
-              <!-- TODO turn back on javadocs - disabled now for testing -->
-              <!-- <goal>jar</goal> -->
+              <goal>jar</goal>
             </goals>
             <configuration>
               <additionalparam>${javadoc.opts}</additionalparam>
@@ -505,7 +443,7 @@
 
   <dependencyManagement>
     <dependencies>
-      <!-- Phoenix dependencies -->
+      <!-- Intra-project dependencies -->
       <dependency>
         <groupId>org.apache.phoenix</groupId>
         <artifactId>phoenix-core</artifactId>
@@ -521,22 +459,22 @@
       <dependency>
         <groupId>org.apache.phoenix</groupId>
         <artifactId>phoenix-flume</artifactId>
-        <version>${phoenix.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.phoenix</groupId>
         <artifactId>phoenix-kafka</artifactId>
-        <version>${phoenix.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.phoenix</groupId>
         <artifactId>phoenix-pig</artifactId>
-        <version>${phoenix.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.phoenix</groupId>
         <artifactId>phoenix-spark</artifactId>
-        <version>${phoenix.version}</version>
+        <version>${project.version}</version>
       </dependency>
 
       <!-- HBase dependencies -->
@@ -583,16 +521,6 @@
       <dependency>
         <groupId>org.apache.hbase</groupId>
         <artifactId>hbase-common</artifactId>
-        <version>${hbase.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.hbase</groupId>
-        <artifactId>hbase-metrics-api</artifactId>
-        <version>${hbase.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.hbase</groupId>
-        <artifactId>hbase-metrics</artifactId>
         <version>${hbase.version}</version>
       </dependency>
       <dependency>
@@ -734,133 +662,6 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>org.apache.calcite.avatica</groupId>
-        <artifactId>avatica</artifactId>
-        <version>${avatica.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.calcite.avatica</groupId>
-        <artifactId>avatica-core</artifactId>
-        <version>${avatica.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.calcite.avatica</groupId>
-        <artifactId>avatica-server</artifactId>
-        <version>${avatica.version}</version>
-      </dependency>
-
-      <!-- Transaction dependencies -->
-      <dependency>
-        <groupId>org.apache.tephra</groupId>
-        <artifactId>tephra-api</artifactId>
-        <version>${tephra.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tephra</groupId>
-        <artifactId>tephra-core</artifactId>
-        <version>${tephra.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tephra</groupId>
-        <artifactId>tephra-core</artifactId>
-        <type>test-jar</type>
-        <version>${tephra.version}</version>
-        <scope>test</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.tephra</groupId>
-        <artifactId>tephra-hbase-compat-1.4</artifactId>
-        <version>${tephra.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.omid</groupId>
-        <artifactId>omid-hbase-client-hbase1.x</artifactId>
-        <version>${omid.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.omid</groupId>
-        <artifactId>omid-hbase-coprocessor-hbase1.x</artifactId>
-        <version>${omid.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.omid</groupId>
-        <artifactId>omid-tso-server-hbase1.x</artifactId>
-        <version>${omid.version}</version>
-        <exclusions>
-          <exclusion>
-          <groupId>org.testng</groupId>
-          <artifactId>testng</artifactId>
-        </exclusion>
-      </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.omid</groupId>
-        <artifactId>omid-tso-server-hbase1.x</artifactId>
-        <version>${omid.version}</version>
-        <type>test-jar</type>
-        <exclusions>
-          <exclusion>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-
-
-      <!-- Make sure we have all the antlr dependencies -->
-      <dependency>
-        <groupId>org.antlr</groupId>
-        <artifactId>antlr-runtime</artifactId>
-        <version>${antlr.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>jline</groupId>
-        <artifactId>jline</artifactId>
-        <version>2.11</version>
-      </dependency>
-      <dependency>
-        <groupId>sqlline</groupId>
-        <artifactId>sqlline</artifactId>
-        <version>${sqlline.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${guava.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.apache.flume</groupId>
         <artifactId>flume-ng-core</artifactId>
         <version>${flume.version}</version>
@@ -872,109 +673,20 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>com.github.stephenc.findbugs</groupId>
-        <artifactId>findbugs-annotations</artifactId>
-        <version>${findbugs-annotations.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.github.stephenc.jcip</groupId>
-        <artifactId>jcip-annotations</artifactId>
-        <version>${jcip-annotations.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.iq80.snappy</groupId>
-        <artifactId>snappy</artifactId>
-        <version>${snappy.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-core-asl</artifactId>
-        <version>${jackson.version}</version>
-        <scope>compile</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-        <version>${jackson.version}</version>
-        <scope>compile</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>jsr305</artifactId>
-        <version>2.0.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-jaxrs</artifactId>
-        <version>${jackson.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-xc</artifactId>
-        <version>${jackson.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
       </dependency>
-      <dependency>
+     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-all</artifactId>
         <version>${mockito-all.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>com.google.protobuf</groupId>
-        <artifactId>protobuf-java</artifactId>
-        <version>${protobuf-java.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>${log4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-cli</groupId>
-        <artifactId>commons-cli</artifactId>
-        <version>${commons-cli.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>${commons-logging.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.htrace</groupId>
-        <artifactId>htrace-core</artifactId>
-        <version>${htrace.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>${commons-codec.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
-        <version>${collections.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-csv</artifactId>
         <version>${commons-csv.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>${jodatime.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.curator</groupId>
@@ -985,21 +697,6 @@
         <groupId>org.apache.curator</groupId>
         <artifactId>curator-client</artifactId>
         <version>${curator.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.clearspring.analytics</groupId>
-        <artifactId>stream</artifactId>
-        <version>${stream.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.salesforce.i18n</groupId>
-        <artifactId>i18n-util</artifactId>
-        <version>${i18n-util.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>${servlet.api.version}</version>
       </dependency>
        <dependency>
         <groupId>com.lmax</groupId>
